feat(bundle): branch bundle daemon on backend (Android Robolectric daemon)
Phase 2 (CLI-side) of the Android bundle player: `compose-preview bundle
daemon` now follows the bundle's `backend` instead of always launching the
desktop daemon. A desktop bundle launches the CMP/Skiko daemon as before;
an android bundle launches the Robolectric daemon (lib-daemon-android +
android.jar + synthesized robolectric.properties), reusing the Phase 1
AndroidBundleLaunch assembly. Both speak the same JSON-RPC over stdio via
the same DaemonMain entry point — only classpath / JVM args / sysprops
differ.

AndroidBundleLaunch grows robolectricSystemProperties() (the robolectric.*
flags the daemon needs, minus the one-shot renderer's manifest/outputDir
batch props); systemProperties() now builds on it.

Until :daemon:android is packaged into the CLI distribution as
lib-daemon-android/ (still Phase 2, only validatable in the SDK-gated
Android CI chain), the android path surfaces an actionable diagnostic and
stays exercisable via -Dcomposeai.cli.libDaemonAndroidDir=<dir>.

https://claude.ai/code/session_01GsJZfW6xT9JDJuvmHsUeA1